<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="project.pam.cpns_2014.MainActivity" >

    <Button
        android:id="@+id/btnJadwal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnFormasi0"
        android:layout_alignParentTop="true"
        android:text="@string/LoadJadwal" />

    <TextView
        android:id="@+id/textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/progressbar"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnLowongan0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnFormasi0"
        android:layout_below="@+id/btnFormasi0"
        android:text="@string/LoadLowongan0" />

    <Button
        android:id="@+id/btnFormasi0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnJadwal"
        android:layout_centerHorizontal="true"
        android:text="@string/LoadFormasi0" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/btnLowongan0"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" >
    </com.google.android.gms.ads.AdView>

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:max="100"
        android:maxHeight="500dip"
        android:maxWidth="300dip"
        android:minHeight="100dip"
        android:minWidth="200dip" />
    
</RelativeLayout>