<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hitam"
    android:orientation="vertical" >

   	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
   	    <TextView
            android:id="@+id/txtIdFormasi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/IdFormasiLem"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/putih" />

        <TextView
            android:id="@+id/txtLembaga"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Lembaga"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/putih" />
        
         <TextView
            android:id="@+id/txtDetail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Detail"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/putih" />
             
    </LinearLayout>

    <ListView
        android:id="@+id/dataCPNS"
        android:layout_width="match_parent"
        android:layout_height="406dp"
        android:background="@color/putih"
        android:dividerHeight="2dp"
        android:verticalSpacing="5dp" />
    
    <Button
        android:id="@+id/buttonHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Home" />

</LinearLayout>